--- a/index.html
+++ b/index.html
@@ -2,14 +2,111 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barbershop</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:regular,500,600,700,800" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css?family=Raleway:800,900" rel="stylesheet" />
+	<title>Barbershop</title>
 </head>
 
 <body>
+	<!-- Шапка страницы -->
+	<header class="header">
+		<img class="logo" src="./img/Logo.png" alt="логотип">
 
+		<img class="main" src="./img/Slider.jpg" alt="главное фото" width="480px" , height="580px">
+		<nav class="nav">
+			<ul class="nav__list">
+				<li class="nav__item">О нас</li>
+				<li class="nav__item">Услуши и цены</li>
+				<li class="nav__item">Мастера</li>
+				<li class="nav__item">Контакты</li>
+			</ul>
+		</nav>
+		<h1>BarberShop</h1>
+		<p>Мы эксперты в модных мужских стрижках.
+			Работаем быстро, осторожно и со вкусом.</p>
+		<a class="contact" href="#">+380441111111</a>
+		<a class="contact" href="">Онлайн запись</a>
+		<a class="contact" href="#">Назад</a>
+		<a class="contact" href="">Вперед</a>
+	</header>
+	<!-- Главная -->
+	<main class="hero">
+
+	</main>
+	<!-- Информация -->
+	<section class="about">
+		<img class="about__img" src="./img/img.jpg" alt="">
+		<h2 class="title">Лучший Барбершоп
+			твоего города</h2>
+		<p>Если ты хочешь добавить в свой образ больше уверенности – тебе точно к нам.</p>
+		<p>Мы команда, которая никогда не останавливается на достигнутом
+			и жаждет перемен. И когда ты попадешь в руки нашего мастера,
+			то уже никогда не сможешь быть прежним. Мы команда, которая всегда с клиентами "на одной волне". Поэтому, мы
+			всегда готовы усовершенствовать каждого, кто к нам приходит!</p>
+		<a href="">Онлайн запись</a>
+	</section>
+	<!-- Прайс -->
+	<section>
+		<p>Проведи время в компании лучших мастеров</p>
+		<h2>Услуги и цены</h2>
+		<a class="contact" href="">Онлайн запись</a>
+	</section>
+	<!-- Статистика -->
+	<section>
+		<p>старая традиционная школа</p>
+		<h2>Почему приходят именно к нам?</h2>
+		<p>О нас говорят только хорошее. Но лучше
+			1 раз увидеть и прочувствовать, чем 10 раз прочитать. </p>
+		<div></div>
+		<div></div>
+		<div></div>
+		<div></div>
+	</section>
+	<!-- Наши мастера -->
+	<section>
+		<p>для настоящих ценителей атмосферы</p>
+		<h2>Наши мастера</h2>
+		<ul>
+			<li><img src="./img/img1.jpg" alt="фото мастера">
+				<p>Extreme Barber</p>
+			</li>
+			<li><img src="img/img2.jpg" alt="фото мастера">
+				<p>Extreme Barber</p>
+			</li>
+			<li><img src="img/img3.jpg" alt="фото мастера">
+				<p>Extreme Barber</p>
+			</li>
+		</ul>
+	</section>
+	<!-- Примеры работ -->
+	<section>
+		<p>На латинском языке “барба” означает “борода”</p>
+		<img src="./img/Rectangle 25.jpg" alt="">
+		<img src="./img/Rectangle 26.jpg" alt="">
+		<img src="./img/Rectangle 27.jpg" alt="">
+		<img src="./img/Rectangle 28.jpg" alt="">
+	</section>
+	<!-- форма отправки -->
+	<section class="online-form">
+		<h2>Онлайн запись</h2>
+		<a href="#">Отправить</a>
+	</section>
+
+	<!-- футер -->
+	<footer class="footer">
+		<address>
+
+		</address>
+		<a class="adress__contact" href="">+38044 111 11 11</a>
+		<a class="adress__contact" href="">barbershop@gmail.com</a>
+		<p>времы работы</p>
+		<p>Ежедневно с 9:00 до 22:00</p>
+		<a href="#">Instagram</a>
+		<a href="">Youtube</a>
+	</footer>
 </body>
 
 </html>
