--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<nav class="nav">
 			<ul class="nav__list">
 				<li class="nav__item">О нас</li>
-				<li class="nav__item">Услуши и цены</li>
+				<li class="nav__item">Услуги и цены</li>
 				<li class="nav__item">Мастера</li>
 				<li class="nav__item">Контакты</li>
 			</ul>
