--- a/index.html
+++ b/index.html
@@ -8,37 +8,52 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:regular,500,600,700,800" rel="stylesheet" />
 	<link href="https://fonts.googleapis.com/css?family=Raleway:800,900" rel="stylesheet" />
 	<title>Barbershop</title>
+	<link rel="stylesheet" href="./css/main.min.css">
 </head>
 
 <body>
 	<!-- Шапка страницы -->
 	<header class="header">
-		<img class="logo" src="./img/Logo.png" alt="логотип">
+		<div class="container">
+			<div class="header__wrapper">
+				<nav class="menu">
+					<img class="logo" src="./img/Logo.png" alt="логотип">
+					<button class="menu__btn">
+						<img class="menu__svg" src="./img/icon/navigation/menu_24px.svg" alt="">
+					</button>
+					<ul class="menu__list">
+						<li class="menu__item">О нас</li>
+						<li class="menu__item">Услуги и цены</li>
+						<li class="menu__item">Мастера</li>
+						<li class="menu__item">Контакты</li>
+					</ul>
+					<div class="contacts">
+						<a class="contact" href="#">+380441111111</a>
+						<a class="contact" href="">Онлайн запись</a>
+					</div>
+				</nav>
 
-		<img class="main" src="./img/Slider.jpg" alt="главное фото" width="480px" , height="580px">
-		<nav class="nav">
-			<ul class="nav__list">
-				<li class="nav__item">О нас</li>
-				<li class="nav__item">Услуги и цены</li>
-				<li class="nav__item">Мастера</li>
-				<li class="nav__item">Контакты</li>
-			</ul>
-		</nav>
-		<h1>BarberShop</h1>
-		<p>Мы эксперты в модных мужских стрижках.
-			Работаем быстро, осторожно и со вкусом.</p>
-		<a class="contact" href="#">+380441111111</a>
-		<a class="contact" href="">Онлайн запись</a>
-		<a class="contact" href="#">Назад</a>
-		<a class="contact" href="">Вперед</a>
+
+			</div>
+		</div>
 	</header>
+
 	<!-- Главная -->
 	<main class="hero">
+		<img class="hero__foto" src="./img/Slider.jpg" alt="главное фото" width="480px" , height="580px">
+		<h1 class="hero__title">BarberShop</h1>
+		<p>Мы эксперты в модных мужских стрижках.
+			Работаем быстро, осторожно и со вкусом.</p>
 
+		<a class="contact" href="#">Назад</a>
+		<a class="contact" href="">Вперед</a>
 	</main>
+
 	<!-- Информация -->
+
 	<section class="about">
 		<img class="about__img" src="./img/img.jpg" alt="">
+		<span>О нас</span>
 		<h2 class="title">Лучший Барбершоп
 			твоего города</h2>
 		<p>Если ты хочешь добавить в свой образ больше уверенности – тебе точно к нам.</p>
@@ -48,15 +63,17 @@
 			всегда готовы усовершенствовать каждого, кто к нам приходит!</p>
 		<a href="">Онлайн запись</a>
 	</section>
+
 	<!-- Прайс -->
-	<section>
-		<p>Проведи время в компании лучших мастеров</p>
+	<section class="price">
+		<span>Проведи время в компании лучших мастеров</span>
 		<h2>Услуги и цены</h2>
 		<a class="contact" href="">Онлайн запись</a>
 	</section>
+
 	<!-- Статистика -->
-	<section>
-		<p>старая традиционная школа</p>
+	<section class="statistic">
+		<span>старая традиционная школа</span>
 		<h2>Почему приходят именно к нам?</h2>
 		<p>О нас говорят только хорошее. Но лучше
 			1 раз увидеть и прочувствовать, чем 10 раз прочитать. </p>
@@ -65,9 +82,10 @@
 		<div></div>
 		<div></div>
 	</section>
+
 	<!-- Наши мастера -->
 	<section>
-		<p>для настоящих ценителей атмосферы</p>
+		<span>для настоящих ценителей атмосферы</span>
 		<h2>Наши мастера</h2>
 		<ul>
 			<li><img src="./img/img1.jpg" alt="фото мастера">
@@ -81,14 +99,16 @@
 			</li>
 		</ul>
 	</section>
+
 	<!-- Примеры работ -->
 	<section>
-		<p>На латинском языке “барба” означает “борода”</p>
+		<span>На латинском языке “барба” означает “борода”</span>
 		<img src="./img/Rectangle 25.jpg" alt="">
 		<img src="./img/Rectangle 26.jpg" alt="">
 		<img src="./img/Rectangle 27.jpg" alt="">
 		<img src="./img/Rectangle 28.jpg" alt="">
 	</section>
+
 	<!-- форма отправки -->
 	<section class="online-form">
 		<h2>Онлайн запись</h2>
