разметка без стилей

--- a/index.html
+++ b/index.html
@@ -32,8 +32,6 @@
 						<a class="contact" href="">Онлайн запись</a>
 					</div>
 				</nav>
-
-
 			</div>
 		</div>
 	</header>
@@ -84,7 +82,7 @@
 	</section>
 
 	<!-- Наши мастера -->
-	<section>
+	<section class="masters">
 		<span>для настоящих ценителей атмосферы</span>
 		<h2>Наши мастера</h2>
 		<ul>
