--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 						<img class="menu__svg" src="./img/icon/navigation/menu_24px.svg" alt="">
 					</button>
 					<ul class="menu__list">
-						<li class="menu__item">О нас</li>
-						<li class="menu__item">Услуги и цены</li>
-						<li class="menu__item">Мастера</li>
-						<li class="menu__item">Контакты</li>
+						<li class="menu__item"><a href="">О нас</a></li>
+						<li class="menu__item"><a href="">Услуги и цены</a></li>
+						<li class="menu__item"><a href="">Мастера</a></li>
+						<li class="menu__item"><a href="">Контакты</a></li>
 					</ul>
 					<div class="contacts">
-						<a class="contact" href="#">+380441111111</a>
-						<a class="contact" href="">Онлайн запись</a>
+						<a class="contact" href="tel:+380441111111">+38 044 111 11 11</a>
+						<a class="contact primary-btn" href="#footer">Онлайн запись</a>
 					</div>
 				</nav>
 			</div>
@@ -52,8 +52,7 @@
 	<section class="about">
 		<img class="about__img" src="./img/img.jpg" alt="">
 		<span>О нас</span>
-		<h2 class="title">Лучший Барбершоп
-			твоего города</h2>
+		<h2 class="title">Лучший Барбершоп твоего города</h2>
 		<p>Если ты хочешь добавить в свой образ больше уверенности – тебе точно к нам.</p>
 		<p>Мы команда, которая никогда не останавливается на достигнутом
 			и жаждет перемен. И когда ты попадешь в руки нашего мастера,
@@ -66,7 +65,43 @@
 	<section class="price">
 		<span>Проведи время в компании лучших мастеров</span>
 		<h2>Услуги и цены</h2>
-		<a class="contact" href="">Онлайн запись</a>
+		<div class="price__list">
+			<ul>
+				<li class="price__item">
+					<p>Мужская стрижка</p>
+					<span></span>
+				</li>
+				<li class="price__item">
+					<p>Стрижка бороды</p>
+					<span></span>
+				</li>
+				<li class="price__item">
+					<p>Стрижка усов</p>
+					<span></span>
+				</li>
+				<li class="price__item">
+					<p>Бритье опасной бритвой</p>
+					<span></span>
+				</li>
+				<li> class="price__item"
+					<p>Стрижка у стажера</p>
+					<span></span>
+				</li>
+				<li class="price__item">
+					<p>Стрижка под насадку</p>
+					<span></span>
+				</li>
+				<li class="price__item">
+					<p>Детская стрижка(до12лет)</p>
+					<span></span>
+				</li>
+				<li class="price__item">
+					<p>Комуфлирование седины</p>
+					<span></span>
+				</li>
+			</ul>
+		</div>
+		<a class="contact primary-btn" href="">Онлайн запись</a>
 	</section>
 
 	<!-- Статистика -->
