--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:regular,500,600,700,800" rel="stylesheet" />
-	<link href="https://fonts.googleapis.com/css?family=Raleway:800,900" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:regular,500,600,700,800&display=swap"
+		rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css?family=Raleway:700,800,900&display=swap" rel="stylesheet" />
 	<title>Barbershop</title>
 	<link rel="stylesheet" href="./css/main.min.css">
 </head>
@@ -38,7 +39,7 @@
 
 	<!-- Главная -->
 	<main class="hero">
-		<img class="hero__foto" src="./img/Slider.jpg" alt="главное фото" width="480px" , height="580px">
+		<!-- <img class="hero__foto" src="./img/Slider.jpg" alt="главное фото" width="480px" , height="580px"> -->
 		<h1 class="hero__title">BarberShop</h1>
 		<p>Мы эксперты в модных мужских стрижках.
 			Работаем быстро, осторожно и со вкусом.</p>
@@ -50,7 +51,7 @@
 	<!-- Информация -->
 
 	<section class="about">
-		<img class="about__img" src="./img/img.jpg" alt="">
+		<!-- <img class="about__img" src="./img/img.jpg" alt=""> -->
 		<span>О нас</span>
 		<h2 class="title">Лучший Барбершоп твоего города</h2>
 		<p>Если ты хочешь добавить в свой образ больше уверенности – тебе точно к нам.</p>
@@ -63,6 +64,7 @@
 
 	<!-- Прайс -->
 	<section class="price">
+		<img class="about__img" src="./img/img.jpg" alt="">
 		<span>Проведи время в компании лучших мастеров</span>
 		<h2>Услуги и цены</h2>
 		<div class="price__list">
@@ -83,7 +85,7 @@
 					<p>Бритье опасной бритвой</p>
 					<span></span>
 				</li>
-				<li> class="price__item"
+				<li class="price__item">
 					<p>Стрижка у стажера</p>
 					<span></span>
 				</li>
