--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 						<li class="menu__item"><a href="">Мастера</a></li>
 						<li class="menu__item"><a href="">Контакты</a></li>
 					</ul>
-					<div class="contacts">
-						<a class="contact" href="tel:+380441111111">+38 044 111 11 11</a>
-						<a class="contact primary-btn" href="#footer">Онлайн запись</a>
-					</div>
 				</nav>
+				<div class="contacts">
+					<a class="contact" href="tel:+380441111111">+38 044 111 11 11</a>
+					<a class="contact primary-btn" href="#footer">Онлайн запись</a>
+				</div>
 			</div>
 		</div>
 	</header>
@@ -40,6 +40,7 @@
 	<!-- Главная -->
 	<main class="hero">
 		<!-- <img class="hero__foto" src="./img/Slider.jpg" alt="главное фото" width="480px" , height="580px"> -->
+		<span class="pre-title">a hair salon for men in kyiv</span>
 		<h1 class="hero__title">BarberShop</h1>
 		<p>Мы эксперты в модных мужских стрижках.
 			Работаем быстро, осторожно и со вкусом.</p>
@@ -52,23 +53,22 @@
 
 	<section class="about">
 		<!-- <img class="about__img" src="./img/img.jpg" alt=""> -->
-		<span>О нас</span>
+		<span class="pre-title">О нас</span>
 		<h2 class="title">Лучший Барбершоп твоего города</h2>
-		<p>Если ты хочешь добавить в свой образ больше уверенности – тебе точно к нам.</p>
+		<p class="discription">Если ты хочешь добавить в свой образ больше уверенности – тебе точно к нам.</p>
 		<p>Мы команда, которая никогда не останавливается на достигнутом
 			и жаждет перемен. И когда ты попадешь в руки нашего мастера,
 			то уже никогда не сможешь быть прежним. Мы команда, которая всегда с клиентами "на одной волне". Поэтому, мы
 			всегда готовы усовершенствовать каждого, кто к нам приходит!</p>
-		<a href="">Онлайн запись</a>
+		<a href="" class="primary-btn light">Онлайн запись</a>
 	</section>
 
 	<!-- Прайс -->
 	<section class="price">
-		<img class="about__img" src="./img/img.jpg" alt="">
-		<span>Проведи время в компании лучших мастеров</span>
-		<h2>Услуги и цены</h2>
-		<div class="price__list">
-			<ul>
+		<span class="pre-title">Проведи время в компании лучших мастеров</span>
+		<h2 class="title">Услуги и цены</h2>
+		<div class="price__container">
+			<ul class="price__list">
 				<li class="price__item">
 					<p>Мужская стрижка</p>
 					<span></span>
@@ -108,25 +108,42 @@
 
 	<!-- Статистика -->
 	<section class="statistic">
-		<div>
-			<span>старая традиционная школа</span>
-			<h2>Почему приходят именно к нам?</h2>
+		<div class="section-why">
+			<span class="pre-title">старая традиционная школа</span>
+			<h2 class="title">Почему приходят именно к нам?</h2>
 			<p>О нас говорят только хорошее. Но лучше
 				1 раз увидеть и прочувствовать, чем 10 раз прочитать. </p>
 		</div>
-		<div></div>
+		<div class="container-number">
+			<div class="number-box">
+				<p>600</p>
+				<span>Довольных клиентов в день</span>
+			</div>
+			<div class="number-box">
+				<p>20</p>
+				<span>Лучших мастеров Киева</span>
+			</div>
+			<div class="number-box">
+				<p>50</p>
+				<span>Наград зха отличный сервис</span>
+			</div>
+			<div class="number-box">
+				<p>100</p>
+				<span>Подарков постоянным клиентам</span>
+			</div>
+		</div>
 	</section>
 
 	<!-- Наши мастера -->
 	<section class="master">
-		<span>для настоящих ценителей атмосферы</span>
-		<h2>Наши мастера</h2>
-		<div class="master__list">
-			<ul>
+		<span class="pre-title">для настоящих ценителей атмосферы</span>
+		<h2 class="title">Наши мастера</h2>
+		<div class="master__section">
+			<ul class="master__list">
 				<li class="master__item">
 					<img src="./img/img1.jpg" alt="фото мастера" width="418">
-					<h3>John Smith</h3>
-					<p>Extreme Barber</p>
+					<h3 class="master__name">John Smith</h3>
+					<p class="master__spec">Extreme Barber</p>
 					<ul class="soc__list">
 						<li class="soc__item"></li>
 						<li class="soc__item"></li>
@@ -136,8 +153,8 @@
 				</li>
 				<li class="master__item">
 					<img src="img/img2.jpg" alt="фото мастера">
-					<h3>John Smith</h3>
-					<p>Extreme Barber</p>
+					<h3 class="master__name">John Smith</h3>
+					<p class="master__spec">Extreme Barber</p>
 					<ul class="soc__list">
 						<li class="soc__item"></li>
 						<li class="soc__item"></li>
@@ -147,8 +164,8 @@
 				</li>
 				<li class="master__item">
 					<img src="img/img3.jpg" alt="фото мастера">
-					<h3>John Smith</h3>
-					<p>Extreme Barber</p>
+					<h3 class="master__name">John Smith</h3>
+					<p class="master__spec">Extreme Barber</p>
 					<ul class="soc__list">
 						<li class="soc__item"></li>
 						<li class="soc__item"></li>
@@ -161,29 +178,36 @@
 	</section>
 
 	<!-- Примеры работ -->
-	<section class="">
-		<p>На латинском языке “барба” означает “борода”</p>
-		<div class="">
-			<ul>
-				<li><img src="./img/Rectangle 25.jpg" alt=""></li>
-				<li><img src="./img/Rectangle 26.jpg" alt=""></li>
-				<li><img src="./img/Rectangle 27.jpg" alt=""></li>
-				<li><img src="./img/Rectangle 28.jpg" alt=""></li>
+	<section class="container-example">
+		<p class="pre-title">На латинском языке “барба” означает “борода”</p>
+		<div class="example">
+			<ul class="example__list">
+				<li class="example__item">
+					<img src="./img/Rectangle 25.jpg" alt="">
+				</li>
+				<li class="example__item">
+					<img src="./img/Rectangle 26.jpg" alt="">
+				</li>
+				<li class="example__item">
+					<img src="./img/Rectangle 27.jpg" alt="">
+				</li>
+				<li class="example__item">
+					<img src="./img/Rectangle 28.jpg" alt="">
+				</li>
 			</ul>
 		</div>
 	</section>
 
 	<!-- форма отправки -->
 	<section class="online-form">
-		<h2>Онлайн запись</h2>
-		<!-- <a href="#">Отправить</a> -->
-		<input type="submit" class="primaty-btn">
+		<h2 class="title">Онлайн запись</h2>
+		<input type="submit" class="primary-btn">
 	</section>
 
 	<!-- футер -->
 	<footer class="footer">
 		<div>
-			<h2>Контакты</h2>
+			<h2 class="title">Контакты</h2>
 			<div>
 				<address>
 
