--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<header class="header">
 		<div class="container">
 			<div class="header__wrapper">
-				<nav class="menu">
+				<nav class="menun">
 					<img class="logo" src="./img/Logo.png" alt="логотип">
 					<button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
 						<svg width="24" height="24" fill="currentColor" viewBox="0 0 20 20"
@@ -27,38 +27,21 @@
 								clip-rule="evenodd"></path>
 						</svg>
 					</button>
-					<ul class="menu__list">
-						<li class="menu__item"><a href="">О нас</a></li>
-						<li class="menu__item"><a href="">Услуги и цены</a></li>
-						<li class="menu__item"><a href="">Мастера</a></li>
-						<li class="menu__item"><a href="">Контакты</a></li>
+					<ul class="menun__list">
+						<li class="menun__item"><a href="" class="menun__link">О нас</a></li>
+						<li class="menun__item"><a href="" class="menun__link">Услуги и цены</a></li>
+						<li class="menun__item"><a href="" class="menun__link">Мастера</a></li>
+						<li class="menun__item"><a href="" class="menun__link">Контакты</a></li>
 					</ul>
 				</nav>
 				<div class="contacts">
 					<a class="contact" href="tel:+380441111111">+38 044 111 11 11</a>
-					<a class="contact primary-btn" href="#footer">Онлайн запись</a>
+					<a class="contact primary-btn" href="#footer">Онлайн-запись</a>
 				</div>
 			</div>
 		</div>
-		<div class="menu-container js-menu-container" id="mobile-menu">
-			<button class="menu-toggle js-close-menu">
-				<svg fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
-					<path fill-rule="evenodd"
-						d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-						clip-rule="evenodd"></path>
-				</svg>
-			</button>
-
-			<ul class="mobile-menu">
-				<li><a href="" class="link">О нас</a></li>
-				<li><a href="" class="link">Работы</a></li>
-				<li><a href="" class="link">Контакты</a></li>
-				<li><a href="" class="link">Карьера</a></li>
-			</ul>
-		</div>
 		<!-- Главная -->
 		<main class="hero">
-			<!-- <img class="hero__foto" src="./img/Slider.jpg" alt="главное фото" width="480px" , height="580px"> -->
 			<span class="pre-title">a hair salon for men in kyiv</span>
 			<h1 class="hero__title">BarberShop</h1>
 			<p>Мы эксперты в модных мужских стрижках.
@@ -67,7 +50,6 @@
 			<a class="contact" href="#">Назад</a>
 			<a class="contact" href="">Вперед</a>
 		</main>
-
 
 	</header>
 
@@ -252,6 +234,23 @@
 			</div>
 		</div>
 	</footer>
+	<!-- Мобильное меню -->
+	<div class="menu-container js-menu-container" id="mobile-menu">
+		<button class="menu-toggle js-close-menu">
+			<svg fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+				<path fill-rule="evenodd"
+					d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+					clip-rule="evenodd"></path>
+			</svg>
+		</button>
+
+		<ul class="mobile-menu">
+			<li><a href="" class="link">О нас</a></li>
+			<li><a href="" class="link">Работы</a></li>
+			<li><a href="" class="link">Контакты</a></li>
+			<li><a href="" class="link">Карьера</a></li>
+		</ul>
+	</div>
 	<script defer src="js/mobile-menu.js"></script>
 </body>
 
